--- a/libs/designer-ui/src/lib/querybuilder/querybuilder.less
+++ b/libs/designer-ui/src/lib/querybuilder/querybuilder.less
@@ -21,7 +21,7 @@
   .msla-querybuilder-row-content {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 2fr;
     align-items: center;
     .msla-querybuilder-row-value-input {
       width: 100%;
@@ -37,6 +37,7 @@
         line-height: 24px;
         caret-color: #444;
         padding-inline-start: 5px;
+        padding-inline-end: 15px;
         &.readonly {
           background-color: rgba(128, 128, 128, 0.1);
         }
