tabbing for editors

--- a/libs/designer-ui/src/lib/panel/panel.less
+++ b/libs/designer-ui/src/lib/panel/panel.less
@@ -102,6 +102,9 @@
   .msla-pivot {
     overflow: hidden;
     clear: left;
+    .msla-panel-menu {
+      padding-bottom: 10px;
+    }
 
     .msla-workflowpanel-pivot-error-icon {
       margin-left: 3px;
