--- a/libs/designer-ui/src/lib/token/token.less
+++ b/libs/designer-ui/src/lib/token/token.less
@@ -21,13 +21,12 @@
   .msla-token-delete {
     align-self: center;
     font-size: @token-font-size;
-    vertical-align: top;
-    padding-left: 5px;
-    padding-right: 0;
     color: #000;
     line-height: @token-height;
+    width: 12px;
     &:focus {
       color: rgba(51, 51, 51, 0.5);
+      outline: none;
     }
   }
   .msla-editor-input-secure-token {
