Fixing dynamic load for connectors with no connections

--- a/libs/designer-ui/src/lib/combobox/combobox.less
+++ b/libs/designer-ui/src/lib/combobox/combobox.less
@@ -80,3 +80,12 @@
 .msla-combobox-custom-option {
   color: rgb(0, 120, 212);
 }
+
+.msla-combobox-loading {
+  display: flex;
+}
+
+.msla-combobox-loading-text {
+  color: rgb(40 38 38);
+  padding-left: 8px;
+}
