--- a/libs/designer-ui/src/lib/querybuilder/querybuilder.less
+++ b/libs/designer-ui/src/lib/querybuilder/querybuilder.less
@@ -41,6 +41,9 @@
         &.readonly {
           background-color: rgba(128, 128, 128, 0.1);
         }
+        p {
+          margin: 0;
+        }
       }
       .editor-placeholder {
         color: #696969;
