--- a/libs/designer-ui/src/lib/authentication/authentication.less
+++ b/libs/designer-ui/src/lib/authentication/authentication.less
@@ -1,3 +1,4 @@
+@import (reference) '../variables.less';
 .msla-authentication-editor-container {
   border: 1px dashed @defaultBorderColor;
   display: flex;
@@ -22,25 +23,17 @@
 }
 
 .msla-authentication-editor-expanded-editor-container {
-  width: 85%;
   margin-left: auto;
   margin-right: 0;
 }
 
-.msla-authentication-editor-expanded-item-label {
-  margin-top: 20px;
-}
-
-.msla-authentication-editor-expanded-item {
-  display: flex;
-}
 .msla-authentication-dropdown {
+  &.has-error {
+    padding-bottom: 20px;
+  }
   .ms-Dropdown {
     height: 28px;
   }
-}
-.msla-authentication-text-editor-label {
-  margin-top: 8px;
 }
 
 .msla-auth-editor-validation {
@@ -52,7 +45,7 @@
 
 .msla-authentication-editor-expanded-editor {
   width: 100%;
-  margin: 20px auto 10px auto;
+  margin: auto;
   border-radius: 2px;
   position: relative;
   .editor-input {
