--- a/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
@@ -45,7 +45,15 @@
 .msla-result-list {
   position: relative;
   margin: 0px -24px;
-  padding: 0px 24px 24px;
+  padding: 0px 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.msla-browse-list {
+  position: relative;
+  margin: 0px -24px;
+  padding: 0px 20px;
   display: flex;
   flex-direction: column;
 }
