token picker handler

--- a/libs/designer-ui/src/lib/code/codeeditor.less
+++ b/libs/designer-ui/src/lib/code/codeeditor.less
@@ -1,6 +1,7 @@
 @import (reference) '../variables.less';
 
 .msla-code-editor-body {
+  position: relative;
   .msla-monaco {
     border: 1px solid @defaultBorderColor;
     width: 100%;
