--- a/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
+++ b/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
@@ -37,6 +37,11 @@ body.dark {
   font-weight: 500;
   font-size: 14px;
   top: 10px;
+  display: inline-flex;
+}
+
+.msla-workflow-parameters-close {
+  float: right;
 }
 
 .msla-workflow-parameters-add {
