Small styling tweak, error reduction

--- a/libs/designer-ui/src/lib/settings/settings.less
+++ b/libs/designer-ui/src/lib/settings/settings.less
@@ -106,8 +106,8 @@
     .msla-setting-section-dropdown {
       display: block;
       width: 50%;
-      margin-left: 45%;
-      margin-bottom: 8px;
+      // margin-left: 45%;
+      // margin-bottom: 8px;
     }
 
     .msla-setting-section-settings {
