--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -84,6 +84,7 @@
   width: 300px;
   height: 225px;
   border-radius: 4px;
+  overflow: hidden;
   box-shadow: 0px 3.2px 7.2px rgba(0, 0, 0, 0.132), 0px 0.6px 1.8px rgba(0, 0, 0, 0.108) !important;
 
   svg {
@@ -94,7 +95,7 @@
 
 .react-flow__minimap-mask {
   stroke: #1f85ff;
-  stroke-width: 2px;
+  stroke-width: 6px;
   stroke-linejoin: round;
   fill: #ffffffb3; // white, 70% opacity
 }
@@ -135,4 +136,45 @@
 
 .msla-loading-container {
   margin: 32px 0;
+}
+
+body.dark {
+  .react-flow__controls-button {
+    background: @ms-color-nodeBackground;
+    border-bottom: 1px solid @ms-color-subtleBorder;
+    fill: white;
+
+    i {
+      color: white;
+    }
+  }
+
+  .react-flow__minimap {
+    background: @ms-color-nodeBackground;
+  }
+
+  .react-flow__minimap-mask {
+    fill: #323130b3; // nodeBackground, 70% opacity
+  }
+
+  .react-flow__edge-path {
+    stroke: @ms-color-edge;
+  }
+  .react-flow__edge {
+    marker > path {
+      fill: @ms-color-edge;
+    }
+  }
+
+  .ms-Pivot-link {
+    background: none;
+  }
+}
+
+[data-color-scheme='dark'] {
+  color-scheme: dark;
+}
+
+[data-color-scheme='light'] {
+  color-scheme: light;
 }
