--- a/libs/designer-ui/src/lib/themes.less
+++ b/libs/designer-ui/src/lib/themes.less
@@ -23,3 +23,11 @@
 @ms-color-neutralDark: #fcfcfb;
 @ms-color-black: #fdfdfd;
 @ms-color-white: #323130;
+
+@ms-color-nodeBackground: #323130;
+@ms-color-nodeBackgroundHover: #484644;
+@ms-color-nodeBorder: #797775;
+@ms-color-nodeBorderFocused: #a19f9d;
+@ms-color-graphBackground: #252423;
+@ms-color-edge: #8a8886;
+@ms-color-subtleBorder: #323130;
