--- a/libs/designer/src/lib/ui/settings/sections/runafterconfiguration/runafterconfiguration.less
+++ b/libs/designer/src/lib/ui/settings/sections/runafterconfiguration/runafterconfiguration.less
@@ -105,11 +105,8 @@
     }
 
     .msla-run-after-icon {
-      vertical-align: bottom;
-      padding-left: 10px;
-      width: 34px;
-      height: 30px;
-      font-size: 14;
+      padding: 0px 10px;
+      transform: translate(0px, 3px);
     }
   }
 
@@ -172,23 +169,30 @@
   width: 100%;
 }
 
-.msla-run-after-edge-header-contents-container:hover {
-  background-color: #f2f2f2;
-  cursor: pointer;
-}
-
-.msla-run-after-edge-header-contents-container.msla-run-after-header-dark:hover {
-  background-color: #323130;
-  cursor: pointer;
-}
-
-.msla-run-after-select-actions {
-  .msla-run-after-configure-select-button:hover {
-    background-color: #f2f2f2;
+body.light {
+  .msla-run-after-configure-select-button:hover,
+  .msla-run-after-edge-header-contents-container:hover {
+    background-color: #f3f3f3;
     cursor: pointer;
   }
-  .msla-run-after-configure-select-button-dark:hover {
-    background-color: #323130;
+
+  .msla-run-after-configure-select-button:active,
+  .msla-run-after-edge-header-contents-container:active {
+    background-color: #e9e9e9;
+    cursor: pointer;
+  }
+}
+
+body.dark {
+  .msla-run-after-configure-select-button:hover,
+  .msla-run-after-edge-header-contents-container:hover {
+    background-color: @ms-color-nodeBackground;
+    cursor: pointer;
+  }
+
+  .msla-run-after-configure-select-button:active,
+  .msla-run-after-edge-header-contents-container:active {
+    background-color: @ms-color-nodeBackgroundHover;
     cursor: pointer;
   }
 }
@@ -196,15 +200,6 @@
 .msla-run-after-section-description {
   font-family: @font-family;
   font-size: 14px;
-  color: #000000;
-  margin: 12px;
-  width: 100%;
-}
-
-.msla-run-after-section-description-dark {
-  font-family: @font-family;
-  font-size: 14px;
-  color: #fdfdfd;
   margin: 12px;
   width: 100%;
 }
