Added more dark mode styles

--- a/libs/designer-ui/src/lib/actionbuttonv2/actionbuttonv2.less
+++ b/libs/designer-ui/src/lib/actionbuttonv2/actionbuttonv2.less
@@ -4,8 +4,11 @@
   border-radius: 50%;
   box-shadow: 0 0.3px 0.9px rgba(0, 0, 0, 0.1), 0 1.6px 3.6px rgba(0, 0, 0, 0.13);
   height: 24px;
-  padding: 4px 0;
   width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
 
   &::after {
     outline: transparent !important;
@@ -32,20 +35,21 @@
 
 body.dark {
   .msla-action-button-v2 {
-    background-color: #333;
-    border: 1px solid #797775;
+    background-color: @ms-color-primaryBackground;
+    border: 1px solid @ms-color-primaryBorder;
     box-shadow: 0 0.3px 0.9px rgba(255, 255, 255, 0.1), 0 1.6px 3.6px rgba(255, 255, 255, 0.13);
 
     &:active,
     &:focus {
-      border-color: #3aa0f3;
+      border: 2px solid #3aa0f3;
     }
 
     &:hover {
+      background-color: @ms-color-primaryBackgroundHover;
       box-shadow: 0 0.6px 1.8px rgba(255, 255, 255, 0.1), 0 3.2px 7.2px rgba(255, 255, 255, 0.13);
 
       path {
-        fill: #82c7ff;
+        fill: 2px solid#82c7ff;
       }
     }
 
