--- a/libs/designer-ui/src/lib/card/function/function.less
+++ b/libs/designer-ui/src/lib/card/function/function.less
@@ -48,7 +48,7 @@ body.dark {
       }
 
       .msla-textarea {
-        background-color: @ms-color-nodeBackground;
+        background-color: @ms-color-primaryBackground;
         color: @ms-color-neutralPrimary;
 
         &:disabled {
