--- a/libs/designer-ui/src/lib/card/graphContainer/graphContainer.less
+++ b/libs/designer-ui/src/lib/card/graphContainer/graphContainer.less
@@ -13,10 +13,10 @@
 
 body.dark {
   .msla-graph-container {
-    background-color: @ms-color-graphBackground;
-    border: 2px solid @ms-color-nodeBorder;
+    background-color: @ms-color-secondaryBackground;
+    border: 2px solid @ms-color-primaryBorder;
     &.selected {
-      border: 2px solid @ms-color-nodeBorderFocused;
+      border: 2px solid @ms-color-primaryBorderFocused;
     }
   }
 }
