--- a/libs/designer-ui/src/lib/connectorsummarycard/connectorsummarycard.less
+++ b/libs/designer-ui/src/lib/connectorsummarycard/connectorsummarycard.less
@@ -69,3 +69,14 @@
   display: flex;
   gap: 8px;
 }
+
+body.dark {
+  .msla-connector-summary-card {
+    background: @ms-color-primaryBackground;
+    border: 1px solid @ms-color-primaryBorder;
+
+    &:hover {
+      background: @ms-color-primaryBackgroundHover;
+    }
+  }
+}
