--- a/libs/designer-ui/src/lib/editor/base/tokenpicker.less
+++ b/libs/designer-ui/src/lib/editor/base/tokenpicker.less
@@ -36,3 +36,9 @@
 .msla-editor-tokenpicker-button {
   right: -7px;
 }
+
+body.dark {
+  .msla-tokenpicker-button-text {
+    color: @brandColorLight;
+  }
+}
