--- a/libs/designer-ui/src/lib/styles.less
+++ b/libs/designer-ui/src/lib/styles.less
@@ -432,8 +432,8 @@ body.dark {
 
 body.dark {
   .ms-Panel-main {
-    background-color: @ms-color-graphBackground;
+    background-color: @ms-color-secondaryBackground;
     box-shadow: none;
-    border-left: 1px solid @ms-color-subtleBorder;
+    border-left: 1px solid @ms-color-secondaryBorder;
   }
 }
