--- a/libs/designer/src/lib/ui/connections/runAfterIndicator/styles.less
+++ b/libs/designer/src/lib/ui/connections/runAfterIndicator/styles.less
@@ -16,7 +16,7 @@ body.light {
 
 body.dark {
   .msla-run-after-dot-container {
-    background: @ms-color-nodeBackground;
+    background: @ms-color-primaryBackground;
   }
 }
 
