--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -140,17 +140,13 @@
 
 body.dark {
   .react-flow__controls-button {
-    background: @ms-color-nodeBackground;
-    border-bottom: 1px solid @ms-color-subtleBorder;
+    background: @ms-color-primaryBackground;
+    border-bottom: 1px solid @ms-color-primaryBackgroundHover;
     fill: white;
-
-    i {
-      color: white;
-    }
   }
 
   .react-flow__minimap {
-    background: @ms-color-nodeBackground;
+    background: @ms-color-bodyBackground;
   }
 
   .react-flow__minimap-mask {
