--- a/libs/designer-ui/src/lib/themes.less
+++ b/libs/designer-ui/src/lib/themes.less
@@ -24,10 +24,10 @@
 @ms-color-black: #fdfdfd;
 @ms-color-white: #323130;
 
-@ms-color-nodeBackground: #323130;
-@ms-color-nodeBackgroundHover: #484644;
-@ms-color-nodeBorder: #797775;
-@ms-color-nodeBorderFocused: #a19f9d;
-@ms-color-graphBackground: #252423;
+@ms-color-primaryBackground: #323130;
+@ms-color-primaryBackgroundHover: #484644;
+@ms-color-primaryBorder: #797775;
+@ms-color-primaryBorderFocused: #a19f9d;
+@ms-color-secondaryBackground: #252423;
+@ms-color-secondaryBorder: #323130;
 @ms-color-edge: #8a8886;
-@ms-color-subtleBorder: #323130;
