--- a/libs/designer-ui/src/lib/connectioncontainer.less
+++ b/libs/designer-ui/src/lib/connectioncontainer.less
@@ -198,4 +198,8 @@ body.dark {
   .msla-connection-status-icon--error {
     color: #e4878a;
   }
+
+  .msla-connection-view-permissions-link {
+    color: @brandColorLight;
+  }
 }
