--- a/libs/designer-ui/src/lib/panel/panel.less
+++ b/libs/designer-ui/src/lib/panel/panel.less
@@ -201,7 +201,7 @@
       align-items: center;
 
       .msla-panel-empty-text {
-        color: @ms-color-neutralSecondary; /* @ms-color-neutralSecondary */
+        color: @ms-color-neutralSecondary;
         font-size: 14px;
         margin-top: 24px;
       }
