--- a/libs/designer-ui/src/lib/settings/settings.less
+++ b/libs/designer-ui/src/lib/settings/settings.less
@@ -260,29 +260,25 @@
 body.light {
   .msla-setting-section-header {
     background-color: white;
-  }
-
-  .msla-setting-section-header:hover {
-    background-color: #f3f3f3;
-    cursor: pointer;
-  }
-
-  .msla-setting-section-header:active {
-    background-color: #e9e9e9;
+    &:hover {
+      background-color: #f3f3f3;
+      cursor: pointer;
+    }
+    &:active {
+      background-color: #e9e9e9;
+    }
   }
 }
 
 body.dark {
   .msla-setting-section-header {
     background-color: @ms-color-secondaryBackground;
-  }
-
-  .msla-setting-section-header:hover {
-    background-color: @ms-color-primaryBackground;
-    cursor: pointer;
-  }
-
-  .msla-setting-section-header:active {
-    background-color: @ms-color-primaryBackgroundHover;
+    &:hover {
+      background-color: @ms-color-primaryBackground;
+      cursor: pointer;
+    }
+    &:active {
+      background-color: @ms-color-primaryBackgroundHover;
+    }
   }
 }
