--- a/libs/designer/src/lib/ui/settings/sections/runafterconfiguration/runafterconfiguration.less
+++ b/libs/designer/src/lib/ui/settings/sections/runafterconfiguration/runafterconfiguration.less
@@ -170,30 +170,31 @@
 }
 
 body.light {
-  .msla-run-after-configure-select-button:hover,
-  .msla-run-after-edge-header-contents-container:hover {
-    background-color: #f3f3f3;
-    cursor: pointer;
-  }
-
-  .msla-run-after-configure-select-button:active,
-  .msla-run-after-edge-header-contents-container:active {
-    background-color: #e9e9e9;
-    cursor: pointer;
+  .msla-run-after-configure-select-button,
+  .msla-run-after-edge-header-contents-container {
+    &:hover {
+      background-color: #f3f3f3;
+      cursor: pointer;
+    }
+    &:active {
+      background-color: #e9e9e9;
+      cursor: pointer;
+    }
   }
 }
 
 body.dark {
-  .msla-run-after-configure-select-button:hover,
-  .msla-run-after-edge-header-contents-container:hover {
-    background-color: @ms-color-primaryBackground;
-    cursor: pointer;
-  }
+  .msla-run-after-configure-select-button,
+  .msla-run-after-edge-header-contents-container {
+    &:hover {
+      background-color: @ms-color-primaryBackground;
+      cursor: pointer;
+    }
 
-  .msla-run-after-configure-select-button:active,
-  .msla-run-after-edge-header-contents-container:active {
-    background-color: @ms-color-primaryBackgroundHover;
-    cursor: pointer;
+    &:active {
+      background-color: @ms-color-primaryBackgroundHover;
+      cursor: pointer;
+    }
   }
 }
 
