Fixed two ui bugs

--- a/libs/designer-ui/src/lib/card/card.less
+++ b/libs/designer-ui/src/lib/card/card.less
@@ -865,7 +865,7 @@ body.dark {
         display: flex;
         flex-direction: row;
         min-height: 32px;
-        align-items: center;
+        align-items: flex-start;
 
         .panel-card-right-controls {
           display: flex;
@@ -880,7 +880,7 @@ body.dark {
 
         .panel-card-content-icon-section {
           display: flex;
-          margin-right: 8px;
+          margin: 8px 8px 8px 0px;
 
           .panel-card-icon {
             height: 24px;
