A few changes for integration with portal changes

--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationGroupDetails/operationGroupHeader/operationGroupHeader.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationGroupDetails/operationGroupHeader/operationGroupHeader.less
@@ -49,6 +49,12 @@
     right: 0px;
     bottom: 1px;
     font-size: 14px;
-    background: white;
+    background: #fff;
+  }
+}
+
+body.dark {
+  .msla-read-more-container {
+    background: @ms-color-secondaryBackground;
   }
 }
