--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  background-color: #fff;
 
   .msla-search-box {
     margin: 0px;
@@ -25,5 +26,11 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+  }
+}
+
+body.dark {
+  .msla-search-heading-container {
+    background-color: @ms-color-secondaryBackground;
   }
 }
