--- a/libs/designer-ui/src/lib/selectConnection/selectConnection.less
+++ b/libs/designer-ui/src/lib/selectConnection/selectConnection.less
@@ -51,3 +51,14 @@
     font-size: 14px;
   }
 }
+
+body.dark {
+  .ms-DetailsHeader-cellTitle {
+    border-right: 1px solid @ms-color-secondaryBorder;
+  }
+
+  .ms-DetailsHeader {
+    border: none;
+    border-bottom: 1px solid @ms-color-secondaryBorder;
+  }
+}
