One line style change

--- a/libs/designer-ui/src/lib/connectorsummarycard/connectorsummarycard.less
+++ b/libs/designer-ui/src/lib/connectorsummarycard/connectorsummarycard.less
@@ -52,6 +52,7 @@
   flex-wrap: nowrap;
   gap: 8px;
   align-items: center;
+  min-height: 24px;
 
   .msla-connector-summary-title {
     font: 13px/20px @semibold-font-family;
