Dark Mode Support (#1239)
* Implemented Dark Mode

* Added more dark mode styles

* PR Cleanup

* Fixed two ui bugs

* A few changes for integration with portal changes

* Minor css changes

* Updated snapshot

* Border removal

* Fixed panel z-index issue, node addition issue

* One line style change

* Fixed tests

Co-authored-by: Riley Evans <rileyevans@microsoft.com>

--- a/libs/designer-ui/src/lib/card/card.less
+++ b/libs/designer-ui/src/lib/card/card.less
@@ -688,28 +688,6 @@
 }
 
 body.dark {
-  .msla-connector-add-step-button {
-    &:focus {
-      outline: 2px dotted @ms-color-black;
-    }
-  }
-
-  .msla-main-page {
-    .msla-connector-add-step-button:focus {
-      outline: none;
-    }
-  }
-
-  .msla-card {
-    background-color: @ms-color-white;
-  }
-
-  .msla-main-page {
-    .msla-card {
-      background-color: #252423;
-    }
-  }
-
   .msla-tab-component-container {
     .msla-card,
     .msla-card-placeolder {
@@ -742,7 +720,7 @@ body.dark {
   }
 
   .msla-badges {
-    border-top: 1px solid #e1dfdd;
+    border-top: 1px solid @ms-color-primaryBorder;
 
     .panel-card-v2-badge {
       &.active {
@@ -766,27 +744,23 @@ body.dark {
   }
 
   .msla-panel-card-container {
-    .panel-card-main {
-      background-color: #2f2f2f;
+    .panel-card-error {
+      &.error,
+      &.blocked {
+        color: #f1707b;
+      }
 
-      .panel-card-error {
-        &.error,
-        &.blocked {
-          color: #f1707b;
-        }
+      &.severeWarning {
+        color: #fce100;
+      }
 
-        &.severeWarning {
-          color: #fce100;
-        }
+      &.success {
+        color: #92c353;
+      }
 
-        &.success {
-          color: #92c353;
-        }
-
-        &.info,
-        &.warning {
-          color: #a19f9d;
-        }
+      &.info,
+      &.warning {
+        color: #a19f9d;
       }
     }
   }
@@ -891,7 +865,7 @@ body.dark {
         display: flex;
         flex-direction: row;
         min-height: 32px;
-        align-items: center;
+        align-items: flex-start;
 
         .panel-card-right-controls {
           display: flex;
@@ -906,7 +880,7 @@ body.dark {
 
         .panel-card-content-icon-section {
           display: flex;
-          margin-right: 8px;
+          margin: 8px 8px 8px 0px;
 
           .panel-card-icon {
             height: 24px;
@@ -1148,14 +1122,15 @@ body.dark {
   }
 
   .msla-panel-card-container {
+    background-color: @ms-color-primaryBackground;
+    border: 1px solid @ms-color-primaryBorder;
+
     &:focus {
-      outline-color: #babab5;
+      outline-color: @ms-color-primaryBorderFocused;
     }
 
     &:hover {
-      .panel-card-main {
-        background-color: #484644;
-      }
+      background-color: @ms-color-primaryBackgroundHover;
     }
 
     .panel-card-slideout {
