--- a/libs/designer-ui/src/lib/themes.less
+++ b/libs/designer-ui/src/lib/themes.less
@@ -23,3 +23,11 @@
 @ms-color-neutralDark: #fcfcfb;
 @ms-color-black: #fdfdfd;
 @ms-color-white: #323130;
+
+@ms-color-primaryBackground: #323130;
+@ms-color-primaryBackgroundHover: #484644;
+@ms-color-primaryBorder: #797775;
+@ms-color-primaryBorderFocused: #a19f9d;
+@ms-color-secondaryBackground: #252423;
+@ms-color-secondaryBorder: #323130;
+@ms-color-edge: #8a8886;
