--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchCard/operationSearchCard.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchCard/operationSearchCard.less
@@ -62,3 +62,13 @@
 .msla-op-search-card-tooltip-subtitle {
   font: 11px/20px;
 }
+
+body.dark {
+  .msla-op-search-card-container {
+    background-color: @ms-color-primaryBackground;
+
+    &:hover {
+      background-color: @ms-color-primaryBackgroundHover;
+    }
+  }
+}
