--- a/libs/designer/src/lib/ui/connections/runAfterIndicator/styles.less
+++ b/libs/designer/src/lib/ui/connections/runAfterIndicator/styles.less
@@ -1,5 +1,3 @@
-@card-background-color: #fff;
-
 .msla-run-after-dot-container {
   display: flex;
   align-items: center;
@@ -8,6 +6,18 @@
   border-radius: 64px;
   padding: 2px;
   background: @card-background-color;
+}
+
+body.light {
+  .msla-run-after-dot-container {
+    background: #fff;
+  }
+}
+
+body.dark {
+  .msla-run-after-dot-container {
+    background: @ms-color-primaryBackground;
+  }
 }
 
 .msla-run-after-dot {
