A couple UI fixes

--- a/libs/designer-ui/src/lib/connectorsummarycard/connectorsummarycard.less
+++ b/libs/designer-ui/src/lib/connectorsummarycard/connectorsummarycard.less
@@ -69,6 +69,13 @@
   margin-top: 8px;
   display: flex;
   gap: 8px;
+  min-height: 20px;
+}
+
+.msla-connector-summary-header {
+  .msla-connector-summary-display {
+    margin-top: 4px;
+  }
 }
 
 body.dark {
