Added a couple more ui fixes

--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
@@ -12,6 +12,10 @@
 
   .msla-search-box {
     margin: 0px;
+
+    .ms-SearchBox-iconContainer {
+      max-width: 24px;
+    }
   }
 
   .msla-flex-row {
