--- a/apps/designer-standalone/src/components/settings_box.module.less
+++ b/apps/designer-standalone/src/components/settings_box.module.less
@@ -1,11 +1,14 @@
+@background-light: white;
+@background-dark: #323130;
+
+@header-light: #f0f0f0;
+@header-dark: #2a2928;
+
 .toybox {
-  --toy-color-int: var(--toy-color, hsla(0, 0%, 20%, 1));
-  --toy-background-int: var(--toy-bg, white);
-  --toy-header-bg: hsla(0, 0%, 95%, 1);
-  --toy-highlight: hsla(0, 0%, 98%, 1);
-  --toy-lowlight: hsla(0, 0%, 90%, 1);
-  --toy-value-color: hsla(310, 99%, 44%, 1);
-  --toy-key-color: hsla(208, 99%, 33%, 1);
+  --toy-bg: @background-light;
+  --toy-header-bg: @header-light;
+  --toy-highlight: lighten(@header-light, 10%);
+  --toy-lowlight: darken(@header-light, 10%);
   transition: transform 0.2s var(--ease-in-out-quint, cubic-bezier(0.83, 0, 0.17, 1));
   transform: translate3d(0, -100%, 0);
   position: fixed;
@@ -15,19 +18,24 @@
   z-index: var(--toy-z, 2001);
 
   &.active {
-    transform: translate3d(0, 0, 0) scale(1.05);
+    transform: translate3d(0, 0, 0) scale(1);
+  }
+
+  &.dark {
+    --toy-bg: #323130;
+    --toy-header-bg: @header-dark;
+    --toy-highlight: lighten(@header-dark, 10%);
+    --toy-lowlight: darken(@header-dark, 10%);
+    --toy-color: white;
   }
 
   .nub {
-    border-bottom: solid 1px var(--toy-lowlight);
-    border-right: solid 1px var(--toy-lowlight);
-    border-top: solid 1px var(--toy-highlight);
     border-radius: 0 0 5px 5px;
-    box-shadow: var(--level-4, -6px 14px 28px rgba(0, 0, 0, 0.1), -6px 10px 10px rgba(0, 0, 0, 0.12));
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     position: absolute;
-    padding: 10px;
+    padding: 12px;
     top: 100%;
-    left: 20px;
+    left: 24px;
     background: var(--toy-nub-bg, var(--toy-header-bg));
     width: 40px;
     display: grid;
@@ -36,26 +44,23 @@
   }
 
   .contentWrapper {
-    border-left: solid 1px var(--toy-highlight);
-    box-shadow: var(--level-4, 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22));
-    background: var(--toy-background-int);
-    color: var(--toy-color-int);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    background: var(--toy-bg);
     overflow: hidden;
     min-height: 100px;
     max-height: 90vh;
     overflow-y: auto;
-    border-radius: 5px 0 0 5px;
+    border-radius: 0 0 5px 5px;
     padding: 0;
-    padding-top: 10px;
+    padding-top: 16px;
     min-width: 70vw;
     .content {
-      padding: 25px;
+      padding: 24px;
     }
 
     h4 {
       border-bottom: solid 1px var(--toy-lowlight);
       border-top: solid 1px var(--toy-highlight);
-      box-shadow: var(--level-2, 0 2px 3px rgba(0, 0, 0, 0.1), 0 1px 5px rgba(0, 0, 0, 0.13));
       font-family: 'MonoLisa', monospace;
       text-transform: capitalize;
       padding: 4px 6px;
@@ -63,7 +68,7 @@
       font-size: var(--toy-heading-font-size, 12px);
       margin: 0;
       background: var(--toy-header-bg);
-      color: var(--toy-header-color, --toy-color);
+      color: var(--toy-color);
       span {
         display: inline-block;
         font-size: 10px;
