--- a/libs/designer-ui/src/lib/token/token.less
+++ b/libs/designer-ui/src/lib/token/token.less
@@ -17,13 +17,14 @@
   display: inline-flex;
   padding-right: 4px;
   position: relative;
+  gap: 4px;
 
   .msla-token-delete {
     align-self: center;
     font-size: @token-font-size;
     color: #000;
     line-height: @token-height;
-    width: 12px;
+    padding: 0px 2px;
     &:focus {
       color: rgba(51, 51, 51, 0.5);
       outline: none;
