--- a/libs/designer-ui/src/lib/panel/panel.less
+++ b/libs/designer-ui/src/lib/panel/panel.less
@@ -32,6 +32,13 @@
         width: 32px;
         border-radius: 2px;
         margin-right: 4px;
+
+        &.default {
+          background-color: rgb(71, 71, 71);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
       }
 
       .msla-panel-card-title-container {
