--- a/libs/designer-ui/src/lib/createConnection/createConnection.less
+++ b/libs/designer-ui/src/lib/createConnection/createConnection.less
@@ -58,5 +58,105 @@
   width: 100%;
   height: 200px;
   min-width: calc(100% - 20px);
-  background: white;
+}
+
+.msla-function-apps-container {
+  border: 1px solid grey;
+  border-radius: 2px;
+
+  .msla-function-app-list-header {
+    padding: 8px 24px 8px 8px;
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+    border-bottom: 1px solid grey;
+
+    & > span {
+      font-weight: bold;
+    }
+  }
+
+  .msla-function-apps-list-container {
+    max-height: 600px;
+    overflow-y: scroll;
+  }
+
+  .msla-function-app-entry {
+    border-bottom: 1px solid #dddddd;
+
+    .msla-function-app-entry-heading {
+      border: none;
+      outline: none;
+      padding: 8px;
+      display: grid;
+      grid-template-columns: 2fr 2fr 1fr;
+      gap: 4px;
+      width: 100%;
+      text-align: left;
+      background: none;
+      transition: 0.2s background;
+      word-break: break-all;
+
+      &:hover,
+      &:focus,
+      &.expanded {
+        background: @hoverColor;
+      }
+    }
+
+    .msla-function-app-entry-content {
+      padding: 4px 12px 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+
+      *.ms-ChoiceField {
+        background-color: transparent;
+      }
+
+      *.ms-ChoiceFieldLabel {
+        vertical-align: baseline;
+      }
+    }
+
+    .msla-function-app-function {
+      display: flex;
+      align-items: center;
+      padding: 4px 8px;
+      border: none;
+      border-radius: 4px;
+      outline: none;
+      background: none;
+      transition: 0.2s background;
+
+      &:hover,
+      &:focus {
+        background: @hoverColor;
+      }
+    }
+  }
+}
+
+body.dark {
+  .msla-function-app-entry {
+    border-bottom: 1px solid @ms-color-secondaryBorder;
+
+    .msla-function-app-entry-heading {
+      &:focus,
+      &.expanded {
+        background: @ms-color-primaryBackground;
+      }
+      &:hover {
+        background: @ms-color-primaryBackgroundHover;
+      }
+    }
+
+    .msla-function-app-function {
+      &:focus {
+        background: @ms-color-primaryBackground;
+      }
+      &:hover {
+        background: @ms-color-primaryBackgroundHover;
+      }
+    }
+  }
 }
