Small choice group change

--- a/libs/designer-ui/src/lib/createConnection/createConnection.less
+++ b/libs/designer-ui/src/lib/createConnection/createConnection.less
@@ -104,13 +104,14 @@
     }
 
     .msla-function-app-entry-content {
-      padding: 4px 12px 12px;
+      padding: 12px;
       display: flex;
       flex-direction: column;
       gap: 4px;
 
       *.ms-ChoiceField {
         background-color: transparent;
+        margin: 0px;
       }
 
       *.ms-ChoiceFieldLabel {
