--- a/apps/vs-code-data-mapper-react/src/styles.less
+++ b/apps/vs-code-data-mapper-react/src/styles.less
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
-  height: 99%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  padding: 0;
 }
 
 #root {
