Main optional gateway functionality finished

--- a/libs/designer-ui/src/lib/createConnection/createConnection.less
+++ b/libs/designer-ui/src/lib/createConnection/createConnection.less
@@ -45,6 +45,10 @@
       .ms-TextField-reveal {
         height: auto;
       }
+
+      &.center {
+        justify-content: center;
+      }
     }
   }
 }
