--- a/libs/designer-ui/src/lib/createConnection/createConnection.less
+++ b/libs/designer-ui/src/lib/createConnection/createConnection.less
@@ -36,6 +36,7 @@
       .label {
         max-width: 200px;
         min-width: 200px;
+        text-transform: capitalize;
       }
 
       .connection-parameter-input {
