--- a/libs/designer-ui/src/lib/querybuilder/querybuilder.less
+++ b/libs/designer-ui/src/lib/querybuilder/querybuilder.less
@@ -6,13 +6,15 @@
 
 .msla-querybuilder-row-container {
   min-height: 32px;
-  border-left: 1px solid @brandColor;
-  margin-left: 35px;
   display: flex;
   align-items: center;
-
+  &.showBorder {
+    margin-left: 35px;
+    border-left: 1px solid @brandColor;
+  }
   .msla-querybuilder-row-gutter-hook {
     width: 30px;
+    margin-left: -1px;
     border-bottom: 1px solid @brandColor;
   }
   .msla-querybuilder-row-checkbox {
@@ -135,6 +137,7 @@
 
   .msla-querybuilder-row-gutter-hook {
     width: 50px;
+    margin-left: -1px;
     border-bottom: 1px solid @brandColor;
   }
 }
@@ -154,5 +157,42 @@ body.dark {
   }
   .msla-querybuilder-row-add-container:after {
     background-color: @ms-color-bodyBackground;
+  }
+}
+
+.msla-until-editor-container {
+  width: 100%;
+  border-radius: 2px;
+  position: relative;
+  margin: 4px 0px;
+  .editor-input {
+    outline: 1px solid @panel-mode-panel-border-color;
+    margin: 1px;
+    resize: none;
+    font-size: 12px;
+    tab-size: 1;
+    min-height: 24px;
+    line-height: 24px;
+    caret-color: #444;
+    padding-inline-start: 5px;
+    padding-inline-end: 15px;
+    &.readonly {
+      background-color: rgba(128, 128, 128, 0.1);
+    }
+    p {
+      margin: 0;
+    }
+  }
+  .editor-placeholder {
+    color: #696969;
+    overflow: hidden;
+    position: absolute;
+    text-overflow: ellipsis;
+    margin-top: -22px;
+    margin-left: 7px;
+    font-size: 12px;
+    user-select: none;
+    display: inline-block;
+    pointer-events: none;
   }
 }
