Added scope node error banners

--- a/libs/designer-ui/src/lib/card/card.less
+++ b/libs/designer-ui/src/lib/card/card.less
@@ -744,7 +744,7 @@ body.dark {
   }
 
   .msla-panel-card-container {
-    .panel-card-error {
+    .msla-panel-card-error {
       &.error,
       &.blocked {
         color: #f1707b;
@@ -933,14 +933,14 @@ body.dark {
       }
     }
 
-    .panel-card-error {
+    .msla-panel-card-error {
       margin: -4px 12px 6px;
       text-align: left;
       display: flex;
       align-items: center;
       gap: 4px;
 
-      .panel-card-error-text {
+      .msla-panel-card-error-text {
         margin: 0px;
         white-space: nowrap;
         overflow: hidden;
