--- a/libs/designer-ui/src/lib/nodeCollapseToggle/nodeCollapseToggle.less
+++ b/libs/designer-ui/src/lib/nodeCollapseToggle/nodeCollapseToggle.less
@@ -8,6 +8,10 @@
   display: flex;
   align-items: flex-start;
 
+  &.small {
+    padding: 8px 6px;
+  }
+
   cursor: pointer;
   &.disabled {
     pointer-events: none;
