--- a/libs/designer-ui/src/lib/nodeCollapseToggle/nodeCollapseToggle.less
+++ b/libs/designer-ui/src/lib/nodeCollapseToggle/nodeCollapseToggle.less
@@ -4,6 +4,13 @@
   border: none;
   color: white;
   background-color: var(--brand-color, black);
+  padding: 12px 6px;
+  display: flex;
+  align-items: flex-start;
+
+  &.small {
+    padding: 8px 6px;
+  }
 
   cursor: pointer;
   &.disabled {
