laFeat: Optional Gateway Parameters (#1465)
* Main optional gateway functionality finished

* Fixed small gateway-auth issue

* Separated gateway and regular parameters for when they are optional

* Temp rename for casing change

* Rename for casing change

* Import case change

* Somewhat generalized the gateway capability code

* Filtering out param values during submission when hidden by capability

--- a/libs/designer-ui/src/lib/createConnection/createConnection.less
+++ b/libs/designer-ui/src/lib/createConnection/createConnection.less
@@ -36,6 +36,7 @@
       .label {
         max-width: 200px;
         min-width: 200px;
+        text-transform: capitalize;
       }
 
       .connection-parameter-input {
@@ -44,6 +45,10 @@
 
       .ms-TextField-reveal {
         height: auto;
+      }
+
+      &.center {
+        justify-content: center;
       }
     }
   }
