--- a/libs/data-mapper/src/lib/components/configPanel/style.less
+++ b/libs/data-mapper/src/lib/components/configPanel/style.less
@@ -1,16 +1,8 @@
-.schema-label-text {
+.subsection-label-text {
   font-weight: 600;
   font-size: 14px;
   line-height: 20px;
-}
-
-.inform-text {
-  font-size: 14px;
-}
-
-.back-header-text {
-  font-weight: 400;
-  font-size: 14px;
+  width: 100%;
 }
 
 .choice-group {
@@ -26,22 +18,10 @@
   }
 }
 
-.schema-selection-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-}
-
 .custom-navigation {
   margin-left: 24px;
   margin-right: 24px;
   padding-top: 20px;
   height: 100%;
   width: 100%;
-}
-
-.header-text {
-  font-weight: 600;
-  font-size: 20px;
 }
