Fix status pill stories and add aborted status

--- a/libs/designer-ui/src/lib/card/card.less
+++ b/libs/designer-ui/src/lib/card/card.less
@@ -1047,6 +1047,10 @@ body.dark {
     margin: 5px;
     border: 1px solid rgb(100, 100, 100);
   }
+
+  .msla-pill {
+    .msla-pill-card();
+  }
 }
 
 .msla-main-page {
