Some workflow parameter adjustments

--- a/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
+++ b/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
@@ -65,7 +65,8 @@
   .msla-workflow-parameter-field {
     padding: 10px 0px 0px 10px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    min-height: 24px;
   }
 
   .msla-workflow-parameter-value-field {
