--- a/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
+++ b/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
@@ -65,7 +65,6 @@
   .msla-workflow-parameter-field {
     padding: 10px 0px 0px 10px;
     display: flex;
-    align-items: center;
     min-height: 24px;
   }
 
@@ -85,6 +84,11 @@
 
   .msla-workflow-parameters-link-text {
     padding-right: 5px;
+  }
+
+  .msla-workflow-parameter-error-dot {
+    position: absolute;
+    margin: -10px -4px;
   }
 
   *.ms-Button {
