--- a/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
+++ b/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
@@ -1,158 +1,98 @@
 .msla-workflow-parameters {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  .msla-workflow-parameters-heading {
+    margin-top: 20px;
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .ms-List-cell {
-    padding-bottom: 25px;
-  }
-}
-
-.msla-workflow-parameters-empty {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 8%;
-  margin-bottom: 30px;
-}
-
-.msla-workflow-parameters-title {
-  font-weight: normal;
-  color: @brandColor;
-}
-
-.msla-workflow-parameter {
-  display: flex;
-}
-
-.msla-workflow-parameters-error {
-  display: flex;
-  flex-direction: column;
-}
-
-body.dark {
-  .msla-workflow-parameters-text,
-  .msla-workflow-parameters-title {
-    color: @ms-color-themePrimary;
-  }
-}
-
-.msla-workflow-parameters-create {
-  font-weight: 500;
-  font-size: 14px;
-  top: 10px;
-  display: inline-flex;
-}
-
-.msla-workflow-parameters-close {
-  float: right;
-}
-
-.msla-workflow-parameters-add {
-  padding: 20px 0px;
-}
-
-.msla-workflow-parameter-read-only {
-  vertical-align: sub;
-}
-
-.msla-workflow-parameter-heading-text {
-  padding-left: 10px;
-}
-
-.msla-workflow-parameters-empty {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 8%;
-  margin-bottom: 30px;
-}
-
-.msla-workflow-parameter-group {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 304px;
-  padding: 5px 0px;
-  border-bottom: solid #9e9e9e 1px;
-}
-
-.msla-workflow-parameter-field {
-  padding: 10px 0px 0px 10px;
-  display: flex;
-  align-items: flex-start;
-}
-
-.msla-workflow-parameter-value-field {
-  padding: 10px 0px 10px 10px;
-  display: flex;
-  align-items: flex-start;
-}
-
-.msla-workflow-parameter-multiline-editor {
-  min-height: 80px;
-  height: 80px;
-  min-width: 425px;
-  width: 100%;
-  border: solid black 1px;
-}
-
-.msla-workflow-parameter-multiline-editor-error {
-  min-height: 80px;
-  height: 80px;
-  min-width: 425px;
-  width: 100%;
-  border: solid darkred 1px;
-}
-
-body.dark {
-  .msla-workflow-parameter-multiline-editor,
-  .msla-workflow-parameter-editor {
-    border-color: @ms-color-black;
+    padding-bottom: 16px;
   }
 
-  .msla-workflow-parameter-multiline-editor-error,
-  .msla-workflow-parameter-editor-error {
-    border-color: red;
+  .msla-workflow-parameter {
+    display: flex;
+    gap: 8px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #9e9e9e;
+
+    & > div:first-child {
+      flex-grow: 1;
+    }
   }
-}
 
-.msla-workflow-parameter-editor {
-  min-height: 30px;
-  height: 30px;
-  min-width: 425px;
-  width: 100%;
-  border: solid black 1px;
-  padding-top: 10px;
-}
+  .msla-workflow-parameters-empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8%;
+    margin-bottom: 30px;
+  }
 
-.msla-workflow-parameter-editor-error {
-  min-height: 30px;
-  height: 30px;
-  min-width: 425px;
-  width: 100%;
-  border: solid darkred 1px;
-  padding-top: 10px;
-}
+  .msla-workflow-parameters-error {
+    display: flex;
+    flex-direction: column;
+  }
 
-.msla-workflow-parameters-text {
-  text-align: center;
-  padding: 30px 50px;
-}
+  body.dark {
+    .msla-workflow-parameters-text {
+      color: @ms-color-themePrimary;
+    }
+  }
 
-.msla-workflow-parameter-heading-button {
-  font-weight: 500;
-  padding: 10px 0px;
-  text-align: left;
-}
+  .msla-workflow-parameter-read-only {
+    vertical-align: sub;
+  }
 
-.msla-workflow-parameters-create-button {
-  padding: 10px 0px;
-}
+  .msla-workflow-parameter-heading-text {
+    padding-left: 10px;
+  }
 
-.msla-workflow-parameter-edit-or-delete-button {
-  padding: 10px;
-}
+  .msla-workflow-parameters-empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8%;
+    margin-bottom: 30px;
+  }
 
-.msla-workflow-parameters-link {
-  bottom: 20px;
-}
+  .msla-workflow-parameter-field {
+    padding: 10px 0px 0px 10px;
+    display: flex;
+    min-height: 24px;
+  }
 
-.msla-workflow-parameters-link-text {
-  padding-right: 5px;
+  .msla-workflow-parameter-value-field {
+    padding: 10px 0px 10px 10px;
+    display: flex;
+    align-items: flex-start;
+  }
+  .msla-workflow-parameters-text {
+    text-align: center;
+    padding: 30px 50px;
+  }
+
+  .msla-workflow-parameters-link {
+    bottom: 20px;
+  }
+
+  .msla-workflow-parameters-link-text {
+    padding-right: 5px;
+  }
+
+  .msla-workflow-parameter-error-dot {
+    position: absolute;
+    margin: -10px -4px;
+  }
+
+  *.ms-Button {
+    height: 32px;
+    font-size: 14px;
+  }
 }
