--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -138,6 +138,14 @@
   margin: 32px 0;
 }
 
+.msla-flex-row {
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
 body.dark {
   .react-flow__controls-button {
     background: @ms-color-primaryBackground;
